rename root namespace to cua_operator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,4 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["cua"]
+packages = ["cua_operator"]
